Un minimizing Jquery to resolve issue

--- a/templates/touch-the-cloud/template-footer.html
+++ b/templates/touch-the-cloud/template-footer.html
@@ -92,7 +92,7 @@ Template: Footer
 				<br>
 				<br>
 				<p><strong>Feedback</strong>
-					<br><a href="mailto:kim.mccormack@oracle.com">kim.mccormack@oracle.com</a></p>
+					<br><a href="mailto:vijay.pawar@oracle.com">vijay.pawar@oracle.com</a></p>
 			</div>
 			<div id="footer-trailblazers" class="col-sm-4">
 				<h4>Contacts</h4>
