--- a/templates/touch-the-cloud/template-header.html
+++ b/templates/touch-the-cloud/template-header.html
@@ -48,7 +48,8 @@ Template: Header
                                 <ul class="menu-list">
                                     
                                     <li><a href="https://developer.oracle.com/code" target="_blank">Oracle Code Red <i class="fa fa-angle-right hover-right" target="_blank"></i></a></li>
-                                    <li><a href="https://cloud.oracle.com/developer/solutions" target="_blank"> Developer Solutions <i class="fa fa-angle-right hover-right"></i></a></li>
+                                    <li><a href="https://cloud.oracle.com/developer/solutions" target="_blank">Developer Solutions <i class="fa fa-angle-right hover-right"></i></a></li>
+                                    <li><a href="#" target="_blank">&nbsp;</a></li>
                                     
                                 </ul>
                             </td>
@@ -57,8 +58,9 @@ Template: Header
                             <td class="td-menu-fa-list">
                                 <ul class="menu-list">
                                     
-                                    <li><a href="http://innovate.us.oracle.com:81/opcworkshops/index.html" target="_blank"> OPC Workshops <i class="fa fa-angle-right hover-right"></i></a></li>
-                                    <li><a href="http://innovate.us.oracle.com/tab_website/"> Technology Asset Bank <i class="fa fa-angle-right hover-right"></i></a></li>
+                                    <li><a href="http://innovate.us.oracle.com/main/index.html" target="_blank">Oracle Innovate <i class="fa fa-angle-right hover-right"></i></a></li>
+                                    <li><a href="http://innovate.us.oracle.com:81/opcworkshops/index.html" target="_blank">OPC Workshops <i class="fa fa-angle-right hover-right"></i></a></li>
+                                    <li><a href="http://innovate.us.oracle.com/tab_website/">Technology Asset Bank <i class="fa fa-angle-right hover-right"></i></a></li>
                                    
                                 </ul>
                             </td>
@@ -68,8 +70,9 @@ Template: Header
                             <td class="td-menu-fa-list">
                                 <ul class="menu-list">
                                     
-                                    <li><a href="http://innovate.us.oracle.com/cloudaccelerate/" target="_blank"> Cloud Accelerate <i class="fa fa-angle-right hover-right"></i></a></li>
-                                    <li><a href="https://cloud.oracle.com/en_US/tryit" target="_blank">Try The Cloud <i class="fa fa-angle-right hover-right"></i</a></li>
+                                    <li><a href="http://innovate.us.oracle.com/cloudaccelerate/" target="_blank">Cloud Accelerate <i class="fa fa-angle-right hover-right"></i></a></li>
+                                    <li><a href="https://cloud.oracle.com/en_US/tryit" target="_blank">Try The Cloud <i class="fa fa-angle-right hover-right"></i></a></li>
+                                    <li><a href="#" target="_blank">&nbsp;</a></li>
                                 </ul>
                             </td>
                         </div>
