--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -20,8 +20,8 @@ Template: FA Content (4 pillars)
                     <a href="#lob-learn" aria-controls="home" role="tab" data-toggle="tab">
                         <table>
                             <tr>
-                                <td class="td-icon"> <img src="img/i-learn.png"> </td>
-                                <td class="td-content">
+                                <td class="td-icon rounded"> <img src="img/overview.png"> </td>
+                                <td class="td-content ">
                                     <h4>Overview</h4>
                                     <p>What is a Touch The Cloud Workshop Event?</p>
                                 </td>
@@ -33,7 +33,7 @@ Template: FA Content (4 pillars)
                     <a href="#lob-position" aria-controls="profile" role="tab" data-toggle="tab">
                         <table>
                             <tr>
-                                <td class="td-icon"> <img src="img/i-position.png"> </td>
+                                <td class="td-icon rounded"> <img class="rounded" src="img/collateral.png"> </td>
                                 <td class="td-content">
                                     <h4>Collateral</h4>
                                     <p>All the documents to promote and run a Touch the Cloud Workshop</p>
@@ -46,7 +46,7 @@ Template: FA Content (4 pillars)
                     <a href="#lob-win" aria-controls="profile" role="tab" data-toggle="tab">
                         <table>
                             <tr>
-                                <td class="td-icon"> <img src="img/i-stakeholder.png"> </td>
+                                <td class="td-icon rounded"> <img src="img/how-to.png"> </td>
                                 <td class="td-content">
                                     <h4>How to run a Touch The Cloud Workshop</h4>
                                     <p></p>
