--- a/templates/touch-the-cloud/template-header.html
+++ b/templates/touch-the-cloud/template-header.html
@@ -11,7 +11,7 @@ Template: Header
 </noscript>
 <script id="header-template" type="text/html">
     <div id="topbar">
-        <div class="container"> <span id="sitelogo">Touch The Cloud</span>
+        <div class="container"> <span id="sitelogo">Touch The Cloud</span> | <a id="team-owner-blub" href="#team" class="popup" title="Champions"> Champions</a> | <a id="conversation-blub" href="mailto:geries.abouayash@oracle.com,vijay.pawar@oracle.com?subject=Touch The Cloud Request" title="" target="_blank"> Email Us</a>
             <div id="nav-hero-hamburger-container"> <span>MENU</span>
                 <div id="nav-hero-hamburger"> <span></span> <span></span> <span></span> </div>
             </div>
@@ -106,6 +106,15 @@ Template: Header
                 collapseIcon: '<i class="fa fa-angle-up"></i>'
                 , /* An icon to be displayed next to parent menu of expanded sub menus. */
             });
+            if ($('.popup').length) {
+                $('.popup').magnificPopup({
+                    type: 'inline'
+                    , midClick: true
+                    , mainClass: 'mfp-fade'
+                    , alignTop: true
+                    , fixedContentPos: true
+                , });
+            }
         });
     </script>
 </script>
