--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -235,7 +235,7 @@ Template: FA Content (4 pillars)
                                                     <p>To schedule the event, identify and invite the customers </p>
                                                 </li>
                                                 <li>
-                                                    <p>Let the Platform specialist team know when are where this is looking to take place</p>
+                                                    <p>Let the Cloud Platform specialist team know when and where this is looking to take place</p>
                                                 </li>
                                                 <li>
                                                     <p>To source a location with good internet connectivity. It could be hosted in an Oracle office or another location (for example a partner office, customer premises)</p>
@@ -264,7 +264,7 @@ Template: FA Content (4 pillars)
                                         <h4>Next Steps if you are interested to proceed:</h4>
                                         <ul>
                                             <li>
-                                                <p>Please align with the NAS Platform Specialist team (<a href="https://people.us.oracle.com/pls/oracle/f?p=8000:2:::::PERSON_ID:336811311959241">Vijay Pawar</a> and <a href="https://people.us.oracle.com/pls/oracle/f?p=8000:2:100309250387929::NO::PERSON_ID:546681746277753">Geries Abouayash</a>) on a date for running such an event. </p>
+                                                <p>Please align with the NAS Cloud Platform Specialist team (<a href="https://people.us.oracle.com/pls/oracle/f?p=8000:2:::::PERSON_ID:336811311959241">Vijay Pawar</a> and <a href="https://people.us.oracle.com/pls/oracle/f?p=8000:2:100309250387929::NO::PERSON_ID:546681746277753">Geries Abouayash</a>) on a date for running such an event. </p>
                                             </li>
                                         </ul>
                                     </div>
