--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -264,7 +264,7 @@ Template: FA Content (4 pillars)
                                         <h4>Next Steps if you are interested to proceed:</h4>
                                         <ul>
                                             <li>
-                                                <p>Please align with the NAS Cloud Platform Specialist team (<a href="https://people.us.oracle.com/pls/oracle/f?p=8000:2:::::PERSON_ID:336811311959241">Vijay Pawar</a> and <a href="https://people.us.oracle.com/pls/oracle/f?p=8000:2:100309250387929::NO::PERSON_ID:546681746277753">Geries Abouayash</a>) on a date for running such an event. </p>
+                                                <p>Please align with the NAS Cloud Platform Specialist team or contact (<a href="https://people.us.oracle.com/pls/oracle/f?p=8000:2:::::PERSON_ID:336811311959241">Vijay Pawar</a>) on a date for running such an event. </p>
                                             </li>
                                         </ul>
                                     </div>
