--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -223,7 +223,7 @@ Template: FA Content (4 pillars)
                                 <div class="row">
                                     <div class="col-md-12">
                                         <h4>Who delivers the workshop?</h4>
-                                        <p>Facilitation of the event is provided by Oracle NAS Platform specialists. Each event is aimed at enabling the local sales and sales consulting team to replicate the approach as they wish. </p>
+                                        <p>Facilitation of the event is provided by Oracle NAS Cloud Platform specialists. Each event is aimed at enabling the local sales and sales consulting team to replicate the approach as they wish. </p>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -235,7 +235,7 @@ Template: FA Content (4 pillars)
                                                     <p>To schedule the event, identify and invite the customers </p>
                                                 </li>
                                                 <li>
-                                                    <p>Let the Cloud Platform specialist team know when and where this is looking to take place</p>
+                                                    <p>Let the NAS Cloud Platform specialist team know when and where this is looking to take place</p>
                                                 </li>
                                                 <li>
                                                     <p>To source a location with good internet connectivity. It could be hosted in an Oracle office or another location (for example a partner office, customer premises)</p>
@@ -359,7 +359,7 @@ Template: FA Content (4 pillars)
         <div id="lob-win" class="tab-pane fade">
             <div class="panel panel-sake">
                 <div class="container" style="padding: 40px 15px;">
-                    <h4>Please contact the  NAS Platform Specialist team to assist you in setting up an event in your region:</h4>
+                    <h4>Please contact the  NAS Cloud Platform Specialist team to assist you in setting up an event in your region:</h4>
                     <br>
                     <div id="home-focus-areas" class="row collapse in">
                         <!--BOX BEGIN -->
@@ -393,7 +393,7 @@ Template: FA Content (4 pillars)
                                                 <tr>
                                                     <td class="td-content">
                                                         <h4>Geries Abouayash</h4>
-                                                        <p>Sr. Director Platform Specialist Team</p>
+                                                        <p>Sr. Director Cloud Platform Specialist Team</p>
                                                         <p><a href="mailto:geries.abouayash@oracle.com"><i class="fa fa-envelope"></i> E-mail »</a></p>
                                                     </td>
                                                 </tr>
