--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -312,13 +312,13 @@ Template: FA Content (4 pillars)
                         <br>
                         <div class="row download-box-wrapper">
                             <div class="col-md-4 download-box">
-                                <a href="https://stbeehive.oracle.com/content/dav/st/Technology%20and%20Systems/web/docs/cloud-test/Agenda-v2-Main.pptx" class="download-trigger"> <img src="./Cloud Test Drive_files/agenda-download.png"> <i class="fa fa-download hover-icon round"></i> </a>
+                                <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LDA2DF7F35F3FDBA856F0075F6C3FF17C1177A968060/fileview/DD69BDD22DF4B2A5F2163E40F6C3FF17C1177A968060/_Agenda.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/agenda-download.png"> <i class="fa fa-download hover-icon round"></i> </a>
                                 <h5>Agenda</h5> </div>
                             <div class="col-md-4 download-box">
-                                <a href="https://stbeehive.oracle.com/content/dav/st/Technology%20and%20Systems/web/docs/cloud-test/Cloud%20Test%20Drive%20-%20Feedback%20-%20Generic%20-%20v3.doc" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-feedback.png"> <i class="fa fa-download hover-icon round"></i> </a>
+                                <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD9840F2643EBE7A50FA05CEF6C3FF17C1177A968060/fileview/D26FFE00F9D7A0D8F82A8AC6F6C3FF17C1177A968060/_Touch_The_Cloud_-_Feedback_-_v1.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-feedback.png"> <i class="fa fa-download hover-icon round"></i> </a>
                                 <h5>Touch The Cloud Feedback  </h5> </div>
                             <div class="col-md-4 download-box">
-                                <a href="https://stbeehive.oracle.com/content/dav/st/Technology%20and%20Systems/web/docs/cloud-test/Cloud-Test-Drive-Internal.pptx" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-test-drive.png"> <i class="fa fa-download hover-icon round"></i> </a>
+                                <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD44D230C279158BE0D4B41DF6C3FF17C1177A968060/fileview/D384692CC3EB27D434716FB7F6C3FF17C1177A968060/_MainEventPresentation.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-test-drive.png"> <i class="fa fa-download hover-icon round"></i> </a>
                                 <h5>Touch The Cloud Internal presentation</h5> </div>
                         </div>
                         <div class="row download-box-wrapper">
@@ -332,7 +332,7 @@ Template: FA Content (4 pillars)
                             </div>
 -->
                             <div class="col-md-4 download-box">
-                                <a href="https://stbeehive.oracle.com/content/dav/st/Technology%20and%20Systems/web/docs/cloud-test/20170124A01.CTD%20Brochure.General-v7.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/ctg-brochure.png"> <i class="fa fa-download hover-icon round"></i> </a>
+                                <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD0E89D92610FE7509B8E264F6C3FF17C1177A968060/fileview/D55CE202E2E5618BA26DCA7EF6C3FF17C1177A968060/_Brochure.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/ctg-brochure.png"> <i class="fa fa-download hover-icon round"></i> </a>
                                 <h5>External brochure for the Touch The Cloud Workshop  </h5> </div>
                             <!--
                             <div class="col-md-4 download-box">
@@ -344,7 +344,7 @@ Template: FA Content (4 pillars)
                             </div>
 -->
                             <div class="col-md-4 download-box">
-                                <a href="https://stbeehive.oracle.com/content/dav/st/Technology%20and%20Systems/web/docs/cloud-test/20170124B01.CTD%20Sample%20Flyer.PrintQuality-v1.pptx" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-platform.png"> <i class="fa fa-download hover-icon round"></i> </a>
+                                <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD276B42E395DD693F92A9E9F6C3FF17C1177A968060/fileview/D2B37DF5046E4A0E3F7BC9D8F6C3FF17C1177A968060/_Sample_Flyer.PrintQuality.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-platform.png"> <i class="fa fa-download hover-icon round"></i> </a>
                                 <h5>Example customer Flyer</h5> </div>
                             <div class="col-md-4 download-box">
                                 <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LF1299679E86872D19D6BCC1F6C3FF17C1177A968060/folder/F10722FE046D3246209D3BE5F6C3FF17C1177A968060/_Touch_The_Cloud_-_Collateral" class="download-trigger" target="_blank"> <img src="./Cloud Test Drive_files/OracleDocs3.png"> <i class="fa fa-download hover-icon round"></i> </a>
