--- a/templates/touch-the-cloud/template-header.html
+++ b/templates/touch-the-cloud/template-header.html
@@ -11,7 +11,7 @@ Template: Header
 </noscript>
 <script id="header-template" type="text/html">
     <div id="topbar">
-        <div class="container"> <span id="sitelogo">Touch The Cloud</span> | <a id="team-owner-blub" href="#team" class="popup" title="Champions"> Champions</a> | <a id="conversation-blub" href="mailto:geries.abouayash@oracle.com,vijay.pawar@oracle.com?subject=Touch The Cloud Request" title="" target="_blank"> Email Us</a>
+        <div class="container"> <span id="sitelogo">Touch The Cloud</span> | <a id="team-owner-blub" href="#team" class="popup" title="Champions"> Champions</a> | <a id="conversation-blub" href="mailto:geries.abouayash@oracle.com,vijay.pawar@oracle.com?subject=Touch The Cloud Request" title=""> Email Us</a>
             <div id="nav-hero-hamburger-container"> <span>MENU</span>
                 <div id="nav-hero-hamburger"> <span></span> <span></span> <span></span> </div>
             </div>
