--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -68,17 +68,20 @@ Template: FA Content (4 pillars)
                         <div class="col-md-12">
                             <p>Oracle has invested in delivering a plethora of new Cloud Services and we want to show our customers how simple – yet powerful they are. We want to showcase their simplicity for the IT and for the non-IT community alike. We want to demonstrate how powerful they are, and how they should be considered as tools that can help an IT organization take the right steps in transforming for the Digital era. </p>
                             <p>We believe the best way to do this is to let our customers develop a real world business solution using our cloud services, hands-on! </p>
-                            <p>Therefore, we have prepared an event where we can give customers access to a number of Oracle Cloud Services, whilst we have Oracle experts guide them in using our tools. Customers browse screens, configure integrations, develop processes and create a mobile applications as part of a guided “Touch The Cloud experience”.</p>
+                            <p>Therefore, we have prepared an event where we can give customers access to a number of Oracle Cloud Services, whilst we have Oracle experts guide them in using our tools. Customers browse screens, configure integrations, develop processes and create a mobile applications as part of a guided “Touch The Cloud experience” solving real world problems around mobile engagement, business process automation, real time integration and getting end to end visibility.</p>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="white-box-panel white-box-1">
                                         <h4>What is this event about?</h4>
                                         <ul>
                                             <li>
-                                                <p>Allowing the customers to get an appreciation of Oracle’s cloud services by “touching” our services by following some very basic hands-on labs</p>
+                                                <p>Allowing the customers to get an appreciation of Oracle’s cloud services by “touching” our services by following some very basic hands-on labs solving a real world business problem</p>
                                             </li>
                                             <li>
-                                                <p>This is note a training activity, i.e we do not expect that customers will go away knowing how to do integration etc - they just need to get an understanding and appreciation of Oracle's low code high productivity cloud services</p>
+                                                <p>At the end of the workshop be able to identify other key business problems that can be solved using these serivces </p>
+                                            </li>
+                                            <li>
+                                                <p>This is not a training activity, i.e we do not expect that customers will go away knowing how to do integration etc - they just need to get an understanding and appreciation of Oracle's low code high productivity cloud services</p>
                                             </li>
                                         </ul>
                                     </div>
