--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -362,7 +362,7 @@ Template: FA Content (4 pillars)
         <div id="lob-win" class="tab-pane fade">
             <div class="panel panel-sake">
                 <div class="container" style="padding: 40px 15px;">
-                    <h4>Please contact the  NAS Cloud Platform Specialist team to assist you in setting up an event in your region:</h4>
+                    <h4>Please contact the  NAS Cloud Platform Specialist team leaders to assist you in setting up an event in your region:</h4>
                     <br>
                     <div id="home-focus-areas" class="row collapse in">
                         <!--BOX BEGIN -->
@@ -386,6 +386,112 @@ Template: FA Content (4 pillars)
                             </div>
                         </div>
                         <!--BOX END -->
+                        <!--BOX BEGIN -->
+                        <div class="col-sm-6">
+                            <div class="">
+                                <div class="panel panel-box">
+                                    <div class="panel-body">
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="td-content">
+                                                        <h4>Edward Lee </h4>
+                                                        <p>Sales Engineering Manager</p>
+                                                        <p><a href="mailto:edward.p.lee@oracle.com"><i class="fa fa-envelope"></i> E-mail »</a></p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--BOX END -->
+                        <!--BOX BEGIN -->
+                        <div class="col-sm-6">
+                            <div class="">
+                                <div class="panel panel-box">
+                                    <div class="panel-body">
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="td-content">
+                                                        <h4>Anoop Deshpande</h4>
+                                                        <p>Sales Consulting Manager</p>
+                                                        <p><a href="mailto:anoop.deshpande@oracle.com"><i class="fa fa-envelope"></i> E-mail »</a></p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--BOX END -->
+                        <!--BOX BEGIN -->
+                        <div class="col-sm-6">
+                            <div class="">
+                                <div class="panel panel-box">
+                                    <div class="panel-body">
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="td-content">
+                                                        <h4>Jairam Panickssery</h4>
+                                                        <p>Director, Mobility & DX Solutions</p>
+                                                        <p><a href="mailto:jairam.panickssery@oracle.com"><i class="fa fa-envelope"></i> E-mail »</a></p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--BOX END -->
+                        <!--BOX BEGIN -->
+                        <div class="col-sm-6">
+                            <div class="">
+                                <div class="panel panel-box">
+                                    <div class="panel-body">
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="td-content">
+                                                        <h4>Chris Curcio</h4>
+                                                        <p>Sales Consulting Director</p>
+                                                        <p><a href="mailto:chris.curcio@oracle.com"><i class="fa fa-envelope"></i> E-mail »</a></p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--BOX END -->
+                        <!--BOX BEGIN -->
+                        <div class="col-sm-6">
+                            <div class="">
+                                <div class="panel panel-box">
+                                    <div class="panel-body">
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="td-content">
+                                                        <h4>Craig Mikus</h4>
+                                                        <p>SaaS Platform Pursuit Team Leader</p>
+                                                        <p><a href="mailto:craig.mikus@oracle.com"><i class="fa fa-envelope"></i> E-mail »</a></p>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--BOX END -->
+
                         <!--BOX BEGIN -->
                         <div class="col-sm-6">
                             <div class="">
