--- a/templates/touch-the-cloud/template-fa-content.html
+++ b/templates/touch-the-cloud/template-fa-content.html
@@ -23,7 +23,7 @@ Template: FA Content (4 pillars)
                                 <td class="td-icon rounded"> <img src="img/overview.png"> </td>
                                 <td class="td-content ">
                                     <h4>Overview</h4>
-                                    <p>What is a Touch The Cloud Workshop Event?</p>
+                                    <p>What is a Quote to Order Workshop Event?</p>
                                 </td>
                             </tr>
                         </table>
@@ -36,7 +36,7 @@ Template: FA Content (4 pillars)
                                 <td class="td-icon rounded"> <img class="rounded" src="img/collateral.png"> </td>
                                 <td class="td-content">
                                     <h4>Collateral</h4>
-                                    <p>All the documents to promote and run a Touch the Cloud Workshop</p>
+                                    <p>All the documents to promote and run a Quote to Order Workshop</p>
                                 </td>
                             </tr>
                         </table>
@@ -48,7 +48,7 @@ Template: FA Content (4 pillars)
                             <tr>
                                 <td class="td-icon rounded"> <img src="img/how-to.png"> </td>
                                 <td class="td-content">
-                                    <h4>How to run a Touch The Cloud Workshop</h4>
+                                    <h4>How to run a Quote to Order Workshop</h4>
                                     <p></p>
                                 </td>
                             </tr>
@@ -319,10 +319,10 @@ Template: FA Content (4 pillars)
                                 <h5>Agenda</h5> </div>
                             <div class="col-md-4 download-box">
                                 <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD9840F2643EBE7A50FA05CEF6C3FF17C1177A968060/fileview/D26FFE00F9D7A0D8F82A8AC6F6C3FF17C1177A968060/_Touch_The_Cloud_-_Feedback_-_v1.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-feedback.png"> <i class="fa fa-download hover-icon round"></i> </a>
-                                <h5>Touch The Cloud Feedback  </h5> </div>
+                                <h5>Workshop Feedback  </h5> </div>
                             <div class="col-md-4 download-box">
                                 <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD44D230C279158BE0D4B41DF6C3FF17C1177A968060/fileview/D384692CC3EB27D434716FB7F6C3FF17C1177A968060/_MainEventPresentation.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/cloud-test-drive.png"> <i class="fa fa-download hover-icon round"></i> </a>
-                                <h5>Touch The Cloud Internal presentation</h5> </div>
+                                <h5>Workshop Internal presentation</h5> </div>
                         </div>
                         <div class="row download-box-wrapper">
                             <!--
@@ -336,7 +336,7 @@ Template: FA Content (4 pillars)
 -->
                             <div class="col-md-4 download-box">
                                 <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD0E89D92610FE7509B8E264F6C3FF17C1177A968060/fileview/D55CE202E2E5618BA26DCA7EF6C3FF17C1177A968060/_Brochure.pdf" class="download-trigger"> <img src="./Cloud Test Drive_files/ctg-brochure.png"> <i class="fa fa-download hover-icon round"></i> </a>
-                                <h5>External brochure for the Touch The Cloud Workshop  </h5> </div>
+                                <h5>External brochure for the Workshop  </h5> </div>
                             <!--
                             <div class="col-md-4 download-box">
                                 <a href="docs/cloud-test/img1.pptx" class="download-trigger">
