--- a/templates/touch-the-cloud/template-header.html
+++ b/templates/touch-the-cloud/template-header.html
@@ -11,7 +11,7 @@ Template: Header
 </noscript>
 <script id="header-template" type="text/html">
     <div id="topbar">
-        <div class="container"> <span id="sitelogo">Touch The Cloud</span> | <a id="team-owner-blub" href="#team" class="popup" title="Champions"> Champions</a> | <a id="conversation-blub" href="mailto:geries.abouayash@oracle.com,edward.p.lee@oracle.com,jairam.panickssery@oracle.com,anoop.deshpande@oracle.com,chris.curcio@oracle.com,craig.mikus@oracle.com,vijay.pawar@oracle.com?subject=Touch The Cloud Request" title=""> Email Us</a>
+        <div class="container"> <span id="sitelogo">iPaaS - Build a Quote to Order Process </span> | <a id="team-owner-blub" href="#team" class="popup" title="Champions"> Champions</a> | <a id="conversation-blub" href="mailto:geries.abouayash@oracle.com,edward.p.lee@oracle.com,jairam.panickssery@oracle.com,anoop.deshpande@oracle.com,chris.curcio@oracle.com,craig.mikus@oracle.com,vijay.pawar@oracle.com?subject=Quote to Order Workshop Request" title=""> Email Us</a>
             <div id="nav-hero-hamburger-container"> <span>MENU</span>
                 <div id="nav-hero-hamburger"> <span></span> <span></span> <span></span> </div>
             </div>
@@ -30,9 +30,9 @@ Template: Header
                         <div class="col-sm-2 col-xs-12">
                             <td class="td-menu-fa-list">
                                 <ul class="menu-list">
+                                    <li><a href="https://rebrand.ly/ttcappdevinternal" target="_blank">DevOps Starter Kit Workshop</a></li>
                                     <li><a href="https://developer.oracle.com/code" target="_blank">Oracle Code Red <i class="fa fa-angle-right hover-right" target="_blank"></i></a></li>
                                     <li><a href="https://cloud.oracle.com/developer/solutions" target="_blank">Developer Solutions <i class="fa fa-angle-right hover-right"></i></a></li>
-                                    <li><a href="#" target="_blank">&nbsp;</a></li>
                                 </ul>
                             </td>
                         </div>
