--- a/templates/touch-the-cloud/template-header.html
+++ b/templates/touch-the-cloud/template-header.html
@@ -30,7 +30,7 @@ Template: Header
                         <div class="col-sm-2 col-xs-12">
                             <td class="td-menu-fa-list">
                                 <ul class="menu-list">
-                                    <li><a href="https://rebrand.ly/ttcappdevinternal" target="_blank">DevOps Starter Kit Workshop</a></li>
+                                    <li><a href="https://rebrand.ly/ttcdevopsinternal" target="_blank">DevOps Starter Kit Workshop</a></li>
                                     <li><a href="https://developer.oracle.com/code" target="_blank">Oracle Code Red <i class="fa fa-angle-right hover-right" target="_blank"></i></a></li>
                                     <li><a href="https://cloud.oracle.com/developer/solutions" target="_blank">Developer Solutions <i class="fa fa-angle-right hover-right"></i></a></li>
                                 </ul>
